--- a/site/index.html
+++ b/site/index.html
@@ -5,7 +5,7 @@
 <meta name="author" content="Zhaohao Yuan">
 <meta name="description" content="entry-task">
 <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no" />
-<title>Dashkit UI</title>
+<title>Discreet UI</title>
 </head>
 <body>
   <div id="app"></div>
