--- a/site/index.html
+++ b/site/index.html
@@ -3,12 +3,12 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="author" content="Zhaohao Yuan">
-<meta name="description" content="entry-task">
+<meta name="description" content="Dishkit UI">
 <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no" />
 <title>Dashkit UI</title>
 </head>
 <body>
-  <div id="app"></div>
-<script src="static/prism.js"></script>
+  <div id="app" class="app"></div>
+  <script src="static/prism.js"></script>
 </body>
 </html>
